--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         <img src="assets/images/blocks/logos/hyper.svg" alt="Image" height="50" class="mb-3">
         <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
         <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-        <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
+        <a routerLink="/sign-in" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
       </div>
 
       <div>
@@ -23,7 +23,7 @@
           <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
         </div>
 
-        <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
+        <button pButton pRipple label="Login" icon="pi pi-user" class="w-full"></button>
       </div>
     </div>
   </form>
