--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,31 @@
-<p>navbar works!</p>
+<div class="card" style="margin-bottom: 5rem;">
+  <p-megamenu [model]="items" [style]="{ 'border-radius': '3rem', display: 'flex' }" styleClass="p-4 bg-surface-0 dark:bg-surface-900">
+    <ng-template #start>
+
+    </ng-template>
+    <ng-template #item let-item>
+      <a *ngIf="item.root" pRipple class="flex items-center cursor-pointer px-4 py-2 overflow-hidden relative font-semibold text-lg uppercase" style="border-radius: 2rem">
+        <i [ngClass]="item.icon"></i>
+        <span class="ml-2">{{ item.label }}</span>
+      </a>
+      <a *ngIf="!item.root && !item.image" class="flex items-center p-4 cursor-pointer mb-2 gap-2">
+                <span class="inline-flex items-center justify-center rounded-full bg-primary text-primary-contrast w-12 h-12">
+                    <i [ngClass]="item.icon + ' text-lg'"></i>
+                </span>
+        <span class="inline-flex flex-col gap-1">
+                    <span class="font-medium text-lg text-surface-900 dark:text-surface-0">{{ item.label }}</span>
+                    <span class="whitespace-nowrap">{{ item.subtext }}</span>
+                </span>
+      </a>
+      <div *ngIf="item.image" class="flex flex-col items-start gap-4">
+        <img [src]="item.image" alt="megamenu-demo" class="w-full" />
+        <span>{{ item.subtext }}</span>
+        <p-button [label]="item.label" [outlined]="true"></p-button>
+      </div>
+    </ng-template>
+    <ng-template #end>
+      <label style="margin-right: 2rem">Welcome: Ruben Santis</label>
+      <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" shape="circle" />
+    </ng-template>
+  </p-megamenu>
+</div>
