--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,33 @@
-<p>sign-in works!</p>
+<div>
+  <form (ngSubmit)="onSubmit()">
+    <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+      <div class="text-center mb-5">
+        <img src="assets/images/blocks/logos/hyper.svg" alt="Image" height="50" class="mb-3">
+<!--        <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>-->
+<!--        <span class="text-600 font-medium line-height-3">Don't have an account?</span>-->
+        <a routerLink="/sign-in" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Register User!</a>
+      </div>
+
+      <div>
+        <label for="name" class="block text-900 font-medium mb-2">Name</label>
+        <input id="name" type="text" placeholder="Email address" pInputText class="w-full mb-3">
+
+        <label for="email" class="block text-900 font-medium mb-2">Email</label>
+        <input id="email" type="text" placeholder="Email address" pInputText class="w-full mb-3">
+
+        <label for="password1" class="block text-900 font-medium mb-2">Password</label>
+        <input id="password1" type="password" placeholder="Password" pInputText class="w-full mb-3">
+
+        <label for="password2" class="block text-900 font-medium mb-2">Confirm Password</label>
+        <input id="password2" type="password" placeholder="Password" pInputText class="w-full mb-3">
+
+
+        <div class="flex align-items-center justify-content-between mb-6">
+          <a routerLink="/login" class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Come back!</a>
+        </div>
+
+        <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
+      </div>
+    </div>
+  </form>
+</div>
