--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+
+:host ::ng-deep {
+  .dock-window {
+    width: 100%;
+    height: 450px;
+    position: relative;
+    background-image: url('https://primefaces.org/cdn/primeng/images/dock/window.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .p-dock {
+    z-index: 1000;
+  }
+}
