--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div>
+  <p-toast/>
   <form (ngSubmit)="onSubmit()">
     <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
       <div class="text-center mb-5">
@@ -9,18 +10,32 @@
       </div>
 
       <div>
-        <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-        <input id="email1" type="text" placeholder="Email address" pInputText class="w-full mb-3">
+        <label for="email" class="block text-900 font-medium mb-2">Email</label>
+        <input [formControl]="email" id="email" type="email" placeholder="Email address" pInputText class="w-full mb-3">
+
+        <!-- Errors-->
+        <div class="container">
+          <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+            <div *ngIf="email.errors?.['required']">Email is required.</div>
+            <div *ngIf="email.errors?.['email']">
+              Invalid format email.
+            </div>
+          </div>
+        </div>
+
 
         <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-        <input id="password1" type="password" placeholder="Password" pInputText class="w-full mb-3">
+        <input [formControl]="password" id="password1" type="password" placeholder="Password" pInputText
+               class="w-full mb-3">
 
-        <div class="flex align-items-center justify-content-between mb-6">
-          <div class="flex align-items-center">
-            <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-            <label for="rememberme1" class="text-900">Remember me</label>
+        <!-- Errors-->
+        <div class="container">
+          <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+            <div *ngIf="password.errors?.['required']">Password is required.</div>
+            <div *ngIf="password.errors?.['minlength']">
+              Password must be at least 6 characters long.
+            </div>
           </div>
-          <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
         </div>
 
         <button pButton pRipple label="Login" icon="pi pi-user" class="w-full"></button>
