Create table users, and edit

--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -3,7 +3,7 @@
   <p-toast />
   <p-table
     #dt1
-    [value]="products"
+    [value]="posts"
     [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']"
     selectionMode="single"
     dataKey="id"
@@ -39,15 +39,15 @@
         <th style="width: 5rem"></th>
       </tr>
     </ng-template>
-    <ng-template #body let-product>
-      <tr [pSelectableRow]="product">
+    <ng-template #body let-post>
+      <tr [pSelectableRow]="post">
         <td>
-          {{ product.name }}
+          {{ post.title }}
         </td>
-        <td>{{ product.company }}</td>
-        <td>{{ product.balance }}</td>
+        <td>{{ post.content }}</td>
+        <td>{{ post.createdAt }}</td>
         <td>
-          <p-button icon="pi pi-search" (click)="selectProduct(product)" severity="secondary" rounded/>
+          <p-button icon="pi pi-search" (click)="selectPost(post)" severity="secondary" rounded/>
         </td>
       </tr>
     </ng-template>
