--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
 
-:host ::ng-deep {
-  .dock-window {
-    width: 100%;
-    height: 450px;
-    position: relative;
-    background-image: url('https://primefaces.org/cdn/primeng/images/dock/window.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+html {
+  font-size: 14px;
+  font-family: "Inter var", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+  line-height: normal;
+}
 
-  .p-dock {
-    z-index: 1000;
-  }
+body {
+  background: var(--surface-ground);
+  color: var(--text-color);
+  padding: 1rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.break-word {
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  max-width: 100px;  /* Ajusta el valor según tu necesidad */
+  min-width: 800px
 }
